--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: kube-system
 data:
   scheduler-config.yaml: |
-    apiVersion: kubescheduler.config.k8s.io/v1beta3
+    apiVersion: kubescheduler.config.k8s.io/v1beta1
     kind: KubeSchedulerConfiguration
     leaderElection:
       leaderElect: false
@@ -46,7 +46,7 @@ spec:
           name: scheduler-framework-sample-config
       containers:
       - name: scheduler-ctrl
-        image: scheduler-framework-sample:f99aae8
+        image: farawaya/gang_scheduler
         imagePullPolicy: IfNotPresent
         args:
         - scheduler-framework-sample
