Add storage related rbac

--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -111,6 +111,8 @@ rules:
     resources:
       - storageclasses
       - csinodes
+      - csistoragecapacities
+      - csidrivers
     verbs:
       - get
       - list
